src/components/middle.css
.middleDiv {
  padding: 40px 80px 20px 80px;
  gap: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.left {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
  max-width: 650px;
}
.top-left-complete {
  display: flex;
  align-items: start;
  justify-content: start;
  gap: 10px;
}
.top-left {
  display: flex;
  align-items: start;
  justify-content: start;
  flex-wrap: wrap;
  flex-direction: column;
  gap: 10px;
}
.top-right {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: column;
  gap: 10px;
}
.top-right-upper {
  display: flex;
  align-items: start;
  justify-content: start;
  flex-wrap: wrap;
  gap: 5px;
}
.top-right-down {
  width: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

/*  */
.right {
  height: auto;
  display: flex;
  align-items: start;
  justify-content: start;
  flex-wrap: wrap;
  flex-direction: column;
  gap: 10px;
}
.last {
  width: 100%;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
}
.old-box {
  background-color: #ff0000;
  border-radius: 20px;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 24px;
  font-weight: bold;
}
.box1 {
  width: 196px;
  height: 295px;
}
.box2 {
  width: 209px;
  height: 174px;
}
.box3 {
  width: 218px;
  height: 174px;
}
.box4 {
  width: 196px;
  height: 144px;
}

.box5 {
  position: relative;
  width: 440px;
  height: 250px;
  overflow: hidden;
}
.text {
  font-size: 16px;
  padding: 5px;
  text-align: center;
  word-break: normal;
  line-height: 25px;
}
.quote {
  font-size: 16px;
  padding: 5px;
  text-align: center;
  word-break: normal;
  line-height: 25px;
}

.videoPlayer {
  width: 100%;
  height: 100%;
  border-radius: 10px;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  pointer-events: none;
}

.box6 {
  width: 195px;
  height: 336px;
}
.box7 {
  width: 195px;
  height: 292px;
}
.box8 {
  width: 418px;
  height: 172px;
}
.box9 {
  width: 218px;
  height: 172px;
}

@media screen and (max-width: 480px) {
  .middleDiv {
    flex-direction: column;
    padding: 10px;
  }
  .left {
    flex-direction: column;
    gap: 5px;
    max-width: auto;
    align-items: center;
    justify-self: center;
  }
  .top-left-complete {
    align-items: center;
    justify-content: center;
    gap: 5px;
    flex-direction: column;
  }
  .top-left {
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 10px;
    width: 100%;
  }
  .top-right {
    gap: 5px;
    width: 100%;
  }
  .top-right-upper {
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
  }
  .last {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
  }
  * {
    /* padding: 2px; */
  }

  .box1,
  .box2,
  .box3,
  .box4,
  .box5,
  .box6,
  .box7,
  .box8,
  .box9 {
    width: 100%;
    height: auto;
    margin: auto;
  }
  .img {
    width: 100%;
  }
}
@media screen and (min-width: 481px) and (max-width: 768px) {
  .middleDiv {
    padding: 30px;
    align-items: start;
    justify-content: start;
    flex-direction: column;
  }
  .top-left-complete {
    align-items: center;
    justify-content: center;
    flex-direction: column-reverse;
  }
  .top-left {
    align-items: start;
    justify-content: center;
    flex-direction: row;
  }
  .top-right {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 10px;
  }
  .top-right-upper {
    display: flex;
    align-items: start;
    justify-content: start;
    flex-wrap: wrap;
    gap: 5px;
  }
  .top-right-down {
    width: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
  }

  /*  */
  .right {
    /* width: 100%; */
    align-items: start;
    justify-content: center;
    flex-direction: row;
    gap: 10px;
  }
  .last {
    flex-direction: column;
    width: 100%;
  }
}
@media screen and (min-width: 769px) and (max-width: 992px) {
  .middleDiv {
    padding: 30px;
    flex-direction: column;
  }
  .top-left-complete {
    display: flex;
    align-items: start;
    justify-content: start;
    gap: 10px;
    flex-direction: column;
  }
  .top-left {
    display: flex;
    align-items: start;
    justify-content: start;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 10px;
    width: 100%;
    /* max-width: 650px; */
    /* max-height: 600px; */
  }
  .top-right {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 10px;
    /* max-width: 650px; */
    /* max-height: 600px; */
  }
  .top-right-upper {
    display: flex;
    align-items: start;
    justify-content: start;
    flex-wrap: wrap;
    gap: 5px;
  }
  .top-right-down {
    width: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
  }

  /*  */
  .right {
    align-items: center;
    justify-content: center;
    flex-direction: row;
  }
  .last {
    flex-direction: row;
  }
}

